user management header z index  and spacing fix

--- a/server/webapp/WEB-INF/rails/webpack/views/global/zindex.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/global/zindex.scss
@@ -24,5 +24,6 @@ $zindex: (
            menu: 11,
            submenu: 10,
            tooltip: 9,
-           users-management-filter: 1
+           users-management-filter: 1,
+           user-management-header : 4
          );
